# python-simple-tic-tac-toe

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: main.yml
simple_tic_tac_toe/: main.py  simple_tic_tac_toe.py
tests/: test_simple_tic_tac_toe.py
